# ethos-vibeathon

./: .gitignore  DEMO_SCRIPT.md  IDEAS.md  README.md
analysis/: pyproject.toml  requirements.txt
analysis/outputs/: all_profiles_20260120_141050.json  high_risk_20260120_141050.json  risk_scores_20260120_141050.csv  risk_scores_20260122_193106.csv
analysis/src/: graph.py  loader.py  main.py  scorer.py
analysis/src/detectors/: __init__.py  bursts.py  clusters.py  reciprocity.py  rings.py  stakes.py
analysis/tests/: test_detectors.py  test_graph.py  test_loader.py  test_scorer.py
contracts/: RiskRegistry.sol  foundry.toml  upload_data.json  upload_scores.py  upload_scores_batch.py
docs/: ARCHITECTURE.md  PRD-FARCASTER-FRAME.md  PRD.md
docs/plans/: 2025-01-20-trust-ring-detector.md
ui/: package-lock.json  package.json
ui/public/.well-known/: farcaster.json
ui/public/data/: all_profiles_20260122_193106.json  high_risk_20260122_193106.json  high_risk_full.json  profile_usernames.json  profiles_full.json  rings_20260120_141050.json  rings_named.json  serpin_graph.json  serpin_network.json  summary_20260120_141050.json  summary_20260122_193106.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/api/ethos/lookup/: route.ts
ui/src/app/api/frame/: route.ts
ui/src/app/api/frame/check/: route.ts
ui/src/app/api/og/error/: route.tsx
ui/src/app/api/og/notfound/: route.tsx
ui/src/app/api/og/result/: route.tsx
ui/src/app/miniapp/: layout.tsx  page.tsx
ui/src/components/: NetworkGraph.tsx
ui/src/lib/: ethos.ts
(+1 files in other folders)
